# SeamCarving

./: .gitignore  CMakeLists.txt  OpenCV_LearningNote.md  README.md  clear.sh  get.sh  killall.sh  makedata.sh  ops.py  runlist.py  toserver.sh
include/: common.h
include/carver/: basecarver.h  scalingcarver.h  simplecarver.h
results/: README.md
src/: CMakeLists.txt
src/carver/: scalingcarver.cpp  simplecarver.cpp
src/tools/: SeamCarver.cpp  test.cpp
